--- a/Rss-example/AndroidManifest.xml
+++ b/Rss-example/AndroidManifest.xml
@@ -6,11 +6,12 @@
     <uses-sdk
         android:minSdkVersion="7"
         android:targetSdkVersion="15" />
+    <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        >
         <activity
             android:name=".MainActivity"
             android:label="@string/title_activity_main" >
